@@ -38,6 +38,9 @@ do not use curses
 \fB\-\-no\-floppy\fR
 do not probe any floppy drive
 .TP
+\fB\-\-no\-pager\fR
+do not use internal pager
+.TP
 \fB\-\-preset\-menu\fR
 use the preset menu
 .TP
